--- a/.github/workflows/rns_daily.yml
+++ b/.github/workflows/rns_daily.yml
@@ -3,7 +3,7 @@ name: Greyhounds — Racing & Sports Daily
 on:
   workflow_dispatch:
   schedule:
-    - cron: "10 4 * * *"   # 04:10 UTC ≈ 2:10 PM Brisbane
+    - cron: "10 4 * * *" # 04:10 UTC daily
 
 permissions:
   contents: write
@@ -11,68 +11,52 @@ permissions:
 jobs:
   scrape:
     runs-on: ubuntu-latest
+    env:
+      TZ: Australia/Sydney
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python + Playwright
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install dependencies
+      - name: Python + Playwright deps
         run: |
           python -m pip install --upgrade pip
-          pip install playwright beautifulsoup4 lxml pandas requests
+          pip install playwright==1.* pandas bs4 lxml
           python -m playwright install --with-deps chromium
 
       - name: Ensure output folders
-        run: mkdir -p data/rns
+        run: |
+          mkdir -p data/rns
 
-      # Stage 1 — discover meetings
-      - name: Racing & Sports — discover meetings
-        run: python src/rns_daily.py --out-dir data/rns
-
-      # Stage 2 — scrape cards for each meeting
-      - name: Racing & Sports — scrape race cards
+      - name: Racing & Sports — full form
         run: |
           set -euo pipefail
-          JSON=$(ls -t data/rns/meetings_*.json | head -n1 || true)
-          if [ -z "${JSON}" ]; then
-            echo "No meetings JSON found; skipping cards scrape."
-            exit 0
-          fi
-          echo "Using ${JSON}"
-          python src/rns_cards.py "${JSON}"
+          python src/rns_daily.py --out-dir data/rns
+        continue-on-error: false
 
       - name: Show previews
         if: always()
         run: |
-          echo "::group::RNS"
           ls -lah data/rns || true
-          for f in $(ls -1t data/rns/full_day_*.csv 2>/dev/null | head -n 1); do
+          for f in $(ls data/rns/* 2>/dev/null | head -n 20); do
             echo "---- $f ----"
-            head -n 40 "$f"
-          done || true
-          echo "::endgroup::"
+            wc -c "$f" || true
+          done
 
       - name: Upload artifacts
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: rns-daily
-          path: data/rns/**
-          if-no-files-found: warn
-          retention-days: 7
+          path: |
+            data/rns/*
+          if-no-files-found: error
 
       - name: Commit results
         if: always()
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name  "github-actions[bot]"
-          git add -A data/rns || true
-          if git diff --cached --quiet; then
-            echo "Nothing to commit."
-          else
-            git commit -m "R&S daily scrape $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
-            git push || echo "No changes to push"
-          fi
+          git config --local user.name "github-actions[bot]"
+          git add data/rns || true
+          git commit -m "RNS daily scrape $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "Nothing to commit"
+          git push || echo "No changes to push"
