--- a/.github/workflows/rns_daily.yml
+++ b/.github/workflows/rns_daily.yml
@@ -3,7 +3,7 @@ name: Greyhounds — Racing & Sports Daily
 on:
   workflow_dispatch:
   schedule:
-    - cron: "10 4 * * *"  # 04:10 UTC daily
+    - cron: "30 0 * * *"   # 00:30 UTC daily (mid-morning AEST/AEDT)
 
 permissions:
   contents: write
@@ -11,8 +11,7 @@ permissions:
 jobs:
   scrape:
     runs-on: ubuntu-latest
-    env:
-      TZ: Australia/Sydney
+    timeout-minutes: 10
 
     steps:
       - name: Checkout
@@ -20,35 +19,47 @@ jobs:
 
       - name: Python + Playwright deps
         run: |
+          sudo apt-get update
+          sudo apt-get install -y libnss3 libatk1.0-0 libatk-bridge2.0-0 libxcb1 libx11-xcb1 \
+                                  libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libgbm1 libasound2
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install requirements
+        run: |
           python -m pip install --upgrade pip
-          pip install playwright==1.* pandas bs4 lxml
+          pip install requests beautifulsoup4 lxml pandas playwright
           python -m playwright install --with-deps chromium
 
-      - name: Ensure output folder
-        run: mkdir -p data/rns
-
-      # 🔹 NEW: seed files so there’s always something to commit
-      - name: Seed outputs (placeholder)
+      - name: Ensure output folders
         run: |
-          set -e
-          ts=$(date -u +'%Y%m%dT%H%M%SZ')
           mkdir -p data/rns
-          echo '{"seed":true,"fetched_at_utc":"'$ts'","meetings":[]}' > "data/rns/meetings_${ts}.json"
-          echo 'meeting,race,time,box,runner,odds,meeting_url,source' > "data/rns/full_day_${ts}.csv"
 
       - name: Racing & Sports — full form
+        id: rns
+        shell: bash
         run: |
           set -euo pipefail
           python src/rns_daily.py --out-dir data/rns
-        continue-on-error: true   # we still want to upload/commit debug if scraping hiccups
+        env:
+          TZ: Australia/Sydney
 
       - name: Show previews
         if: always()
         run: |
+          echo "== data/rns =="
           ls -lah data/rns || true
-          for f in $(ls data/rns/* 2>/dev/null | head -n 20); do
-            echo "---- $f ----"
-            wc -c "$f" || true
+          echo "== first files =="
+          for f in $(ls -1t data/rns/*.json 2>/dev/null | head -n 2); do
+            echo "--- $f ---"
+            head -n 80 "$f" || true
+          done
+          for f in $(ls -1t data/rns/*.csv 2>/dev/null | head -n 2); do
+            echo "--- $f ---"
+            head -n 40 "$f" || true
           done
 
       - name: Upload artifacts
@@ -56,15 +67,18 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: rns-daily
-          path: data/rns/*
-          if-no-files-found: error
+          path: |
+            data/rns/*.json
+            data/rns/*.csv
+            data/rns/*.html
+            data/rns/*.png
+          if-no-files-found: warn
 
-      # 🔹 CHANGED: commit anything new or changed
       - name: Commit results
         if: always()
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add -A
-          git commit -m "RNS daily scrape $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "Nothing to commit"
+          git add -A data/rns
+          git commit -m "RNS scrape $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "Nothing to commit"
           git push || echo "No changes to push"
