--- a/.github/workflows/scrape_daily.yml
+++ b/.github/workflows/scrape_daily.yml
@@ -3,27 +3,13 @@ name: Greyhounds — Daily scrape
 on:
   workflow_dispatch:
   schedule:
-    # 08:05 AEST daily (23:05 UTC previous day)
-    - cron: "5 23 * * *"
-
-permissions:
-  contents: write
-
-concurrency:
-  group: greyhounds-scrape
-  cancel-in-progress: false
-
-env:
-  PYTHONUNBUFFERED: "1"
-  TZ: Australia/Sydney
+    - cron: "05 07 * * *"  # 07:05 UTC ~ evening AEST
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -33,66 +19,31 @@ jobs:
       - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install playwright
+          pip install -r requirements.txt
 
-      - name: Install Playwright (browser + system deps)
+      - name: Ensure folders
         run: |
-          python -m playwright install --with-deps chromium
+          mkdir -p reports/latest
+          mkdir -p forms
 
-      - name: Ensure output folders
+      # If you already have a job that fetches today's PDFs into forms/, keep it.
+      # Otherwise, temporarily rely on existing PDFs in /forms.
+
+      - name: Build daily reports from PDFs
         run: |
-          mkdir -p data/rns data/thedogs data/combined
+          python -m src.run_daily
 
-      # ---- RNS scrape with retries ----
-      - name: Racing & Sports — scrape (retry x3)
+      - name: Show outputs
         run: |
-          set -e
-          a() { python src/rns_daily.py --out-dir data/rns || return 1; }
-          a || (sleep 10 && a) || (sleep 20 && a) || true
+          echo "=== probabilities.csv ==="
+          sed -n '1,40p' reports/latest/probabilities.csv || true
+          echo "=== summary.md ==="
+          sed -n '1,120p' reports/latest/summary.md || true
 
-      # ---- TheDogs scrape with retries ----
-      - name: TheDogs — scrape (fallback, retry x3)
+      - name: Commit results to repo
         run: |
-          set -e
-          b() { python src/thedogs_daily.py --out-dir data/thedogs || return 1; }
-          b || (sleep 10 && b) || (sleep 20 && b) || true
-
-      # Minimal merge placeholder (keeps pipeline green)
-      - name: Merge to one CSV (placeholder)
-        run: |
-          python - <<'PY'
-          import os, csv, datetime
-          os.makedirs("data/combined", exist_ok=True)
-          out = "data/combined/full_day_%s.csv" % datetime.datetime.utcnow().strftime("%Y%m%dT%H%M%SZ")
-          with open(out, "w", newline="", encoding="utf-8") as f:
-            csv.writer(f).writerow(["meeting","race","time","box","runner","odds","source","meeting_url"])
-          print("wrote", out)
-          PY
-
-      - name: Show previews
-        run: |
-          echo "==== RNS ====" && ls -lah data/rns | tail -n +1 || true
-          echo "==== THEDOGS ====" && ls -lah data/thedogs | tail -n +1 || true
-          echo "==== COMBINED ====" && ls -lah data/combined | tail -n +1 || true
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: greyhounds-data
-          path: |
-            data/rns/**
-            data/thedogs/**
-            data/combined/**
-
-      - name: Commit results (only if changed)
-        run: |
-          if [ -n "$(git status --porcelain)" ]; then
-            git config --local user.name  "github-actions[bot]"
-            git config --local user.email "github-actions[bot]@users.noreply.github.com"
-            git add -A
-            git commit -m "data: auto-scrape $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
-            git push
-          else
-            echo "No changes to commit."
-          fi
+          git config --local user.email "actions@users.noreply.github.com"
+          git config --local user.name "actions-user"
+          git add reports/latest
+          git commit -m "daily: update betting reports" || echo "nothing to commit"
+          git push
