--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,19 @@
+# Core dependencies for Greyhound daily form guide project
+
+# HTTP + HTML parsing
 requests
 beautifulsoup4
-pandas
+lxml
+
+# PDF parsing
 pdfminer.six
+
+# Data handling
+pandas
+numpy
+
+# Optional: plotting / evaluation (safe to leave in for future)
+matplotlib
+
+# For workflow automation (if you need YAML parsing or config)
+PyYAML
