--- a/.github/workflows/scrape_daily.yml
+++ b/.github/workflows/scrape_daily.yml
@@ -1,108 +1,83 @@
 name: Greyhounds — Daily scrape
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:
   schedule:
-    # every day at 05:02 AEST (19:02 UTC previous day) — tweak if you like
-    - cron: "2 19 * * *"
-
-permissions:
-  contents: write    # allow committing results
-  actions: read
-
-concurrency:
-  group: daily-scrape
-  cancel-in-progress: false
-
-env:
-  PYTHONUNBUFFERED: "1"
-  TZ: Australia/Sydney
-  # polite fixed UA so we don't get 403s as easily
-  DEFAULT_UA: "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/125 Safari/537.36"
+    - cron: "05 6 * * *"  # 6:05 UTC daily; adjust to your preference
 
 jobs:
   scrape:
+    # If you set up a self-hosted AU runner, uncomment next 2 lines:
+    # runs-on: self-hosted
+    # labels: [linux]
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    env:
+      PYTHONUNBUFFERED: "1"
+      PROXY_URL: ${{ secrets.PROXY_URL }}  # optional
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-          cache: "pip"
 
-      - name: Install dependencies
+      - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Ensure output folders
         run: |
-          mkdir -p data/rns
-          mkdir -p data/thedogs
-          mkdir -p data/combined
-          mkdir -p reports/latest
+          mkdir -p data/rns data/thedogs data/combined forms reports/latest
 
-      # ---------- PRIMARY SOURCE: Racing & Sports ----------
-      - name: Racing & Sports — scrape
-        id: rns
-        env:
-          USER_AGENT: ${{ env.DEFAULT_UA }}
+      - name: Racing & Sports — discover PDFs
         run: |
-          set -euxo pipefail
-          python src/rns_daily.py --out-dir data/rns || echo "RNS scrape failed (continuing)"
+          python -m src.rns_daily || true
 
-      # ---------- FALLBACK SOURCE: TheDogs ----------
-      - name: TheDogs — scrape (fallback)
-        id: thedogs
-        env:
-          USER_AGENT: ${{ env.DEFAULT_UA }}
+      - name: TheDogs — discover meetings (fallback)
         run: |
-          set -euxo pipefail
-          python src/thedogs_daily.py --out-dir data/thedogs || echo "TheDogs scrape failed (continuing)"
+          python -m src.thedogs_daily || true
 
-      # ---------- MERGE ----------
-      - name: Merge to one CSV
+      - name: Download PDFs
         run: |
-          set -euxo pipefail
-          python src/merge_daily.py --rns data/rns --dogs data/thedogs --out data/combined
+          python -m src.fetch_forms || true
 
-      # ---------- QUICK PREVIEWS (optional; doesn’t fail build) ----------
+      - name: Parse PDFs to CSV
+        run: |
+          python -m src.parse_pdf || true
+
+      - name: Make picks & reports
+        run: |
+          python -m src.make_bets || true
+
       - name: Show previews
-        continue-on-error: true
         run: |
-          echo "RNS files:"; ls -la data/rns || true
-          echo "TheDogs files:"; ls -la data/thedogs || true
-          echo "Combined:"; ls -la data/combined || true
-          echo "Reports/latest:"; ls -la reports/latest || true
+          echo "--- latest combined ---"
+          ls -la data/combined || true
+          echo "--- latest forms ---"
+          ls -la forms | tail -n 20 || true
+          echo "--- reports/latest ---"
+          ls -la reports/latest || true
 
-      # ---------- ARTIFACT ----------
-      - name: Upload artifact (zip of data/* and reports/latest)
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: greyhounds-data
           path: |
-            data
-            reports/latest
+            data/**
+            forms/**
+            reports/latest/**
 
-      # ---------- COMMIT BACK ----------
-      - name: Commit results to repo (if changed)
+      - name: Commit results to repo
         run: |
-          set -euxo pipefail
+          git config --local user.email "actions-user@users.noreply.github.com"
           git config --local user.name "actions-user"
-          git config --local user.email "actions@users.noreply.github.com"
           git add -A
-
-          # commit only if there are changes
-          if ! git diff --cached --quiet; then
-            ts=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
-            git commit -m "Daily scrape: update data and reports ($ts)"
-            git push
-          else
-            echo "No changes to commit."
-          fi
+          git commit -m "daily: data & reports $(date -u +"%Y-%m-%dT%H:%M:%SZ")" || echo "Nothing to commit"
+          git push || echo "Nothing to push"
