--- a/.github/workflows/scrape_daily.yml
+++ b/.github/workflows/scrape_daily.yml
@@ -1,22 +1,22 @@
 name: Greyhounds — Daily scrape
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: {}
   schedule:
-    - cron: "05 6 * * *"  # 6:05 UTC daily; adjust to your preference
+    # 9:00 AM AEST daily = 23:00 UTC (adjust if you want)
+    - cron: "0 23 * * *"
+
+permissions:
+  contents: write
 
 jobs:
   scrape:
-    # If you set up a self-hosted AU runner, uncomment next 2 lines:
-    # runs-on: self-hosted
-    # labels: [linux]
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    timeout-minutes: 20
 
     env:
+      PYTHONDONTWRITEBYTECODE: "1"
       PYTHONUNBUFFERED: "1"
-      PROXY_URL: ${{ secrets.PROXY_URL }}  # optional
 
     steps:
       - name: Checkout
@@ -34,50 +34,94 @@ jobs:
 
       - name: Ensure output folders
         run: |
-          mkdir -p data/rns data/thedogs data/combined forms reports/latest
+          mkdir -p forms
+          mkdir -p data/rns
+          mkdir -p data/thedogs
+          mkdir -p data/combined
+          mkdir -p reports/latest
 
-      - name: Racing & Sports — discover PDFs
+      # ---------- FORMS (Racing & Sports) ----------
+      - name: Fetch form PDFs (Racing & Sports)
+        id: fetch_forms
         run: |
-          python -m src.rns_daily || true
+          set -e
+          python fetch_forms.py --out forms || true
+          echo "forms_count=$(ls -1 forms/*.pdf 2>/dev/null | wc -l | tr -d ' ')" >> $GITHUB_OUTPUT
+          echo "Fetched $(ls -1 forms/*.pdf 2>/dev/null | wc -l) PDFs."
 
-      - name: TheDogs — discover meetings (fallback)
+      # ---------- PARSE FORMS ----------
+      - name: Parse PDFs → structured data
+        if: steps.fetch_forms.outputs.forms_count != '0'
         run: |
-          python -m src.thedogs_daily || true
+          python src/parse_pdf.py forms data/rns || true
+          echo "RNS JSON files: $(ls -1 data/rns 2>/dev/null | wc -l)"
 
-      - name: Download PDFs
+      # ---------- THEDOGS (FALLBACK) ----------
+      - name: TheDogs — scrape (fallback source)
+        continue-on-error: true
         run: |
-          python -m src.fetch_forms || true
+          # This step is allowed to fail or produce nothing
+          if [ -f src/thedogs_daily.py ]; then
+            python src/thedogs_daily.py --out-dir data/thedogs || true
+          fi
+          echo "TheDogs JSON files: $(ls -1 data/thedogs 2>/dev/null | wc -l)"
 
-      - name: Parse PDFs to CSV
+      # ---------- MERGE ----------
+      - name: Merge to one CSV/JSON
         run: |
-          python -m src.parse_pdf || true
+          python src/merge_daily.py --rns data/rns --dogs data/thedogs --out data/combined || true
+          echo "Combined files: $(ls -1 data/combined 2>/dev/null | wc -l)"
 
-      - name: Make picks & reports
+      # ---------- PREDICTIONS ----------
+      - name: Generate predictions
         run: |
-          python -m src.make_bets || true
+          if [ -s data/combined/combined.csv ] || [ "$(ls -1 data/rns 2>/dev/null | wc -l)" != "0" ]; then
+            python src/make_bets.py data/combined reports/latest || true
+          fi
 
+      # ---------- GUARANTEE A SUMMARY ----------
+      - name: Ensure summary exists
+        run: |
+          if [ ! -f reports/latest/summary.md ]; then
+            echo "Summary — empty data" > reports/latest/summary.md
+          fi
+          if [ ! -f reports/latest/probabilities.csv ]; then
+            printf "track,date,race,box,runner,prob_win\n" > reports/latest/probabilities.csv
+          fi
+
+      # ---------- PREVIEWS ----------
       - name: Show previews
         run: |
-          echo "--- latest combined ---"
-          ls -la data/combined || true
-          echo "--- latest forms ---"
-          ls -la forms | tail -n 20 || true
-          echo "--- reports/latest ---"
-          ls -la reports/latest || true
+          echo "=== forms ==="
+          ls -l forms || true
+          echo "=== data/rns ==="
+          ls -l data/rns || true
+          echo "=== data/thedogs ==="
+          ls -l data/thedogs || true
+          echo "=== data/combined ==="
+          ls -l data/combined || true
+          echo "=== reports/latest ==="
+          ls -l reports/latest || true
 
+      # ---------- ARTIFACT ----------
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: greyhounds-data
           path: |
-            data/**
-            forms/**
-            reports/latest/**
+            forms
+            data
+            reports/latest
 
+      # ---------- COMMIT RESULTS ----------
       - name: Commit results to repo
         run: |
-          git config --local user.email "actions-user@users.noreply.github.com"
-          git config --local user.name "actions-user"
+          git config --local user.name  "actions-user"
+          git config --local user.email "actions@users.noreply.github.com"
           git add -A
-          git commit -m "daily: data & reports $(date -u +"%Y-%m-%dT%H:%M:%SZ")" || echo "Nothing to commit"
-          git push || echo "Nothing to push"
+          if git diff --cached --quiet; then
+            echo "No changes to commit."
+          else
+            git commit -m "Daily scrape: update forms/data/reports [skip ci]"
+            git push
+          fi
