--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,4 @@
 pandas==2.2.2
-numpy==2.0.1
-beautifulsoup4==4.12.3
-lxml==5.2.2
+pdfplumber==0.11.4
 PyPDF2==3.0.1
-tenacity==8.5.0
-fake-useragent==1.5.1
-curl_cffi==0.6.2
-brotli==1.1.0
-python-dateutil==2.9.0.post0
+pillow==10.4.0
