--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-pandas==2.2.2
-pdfplumber==0.11.4
-PyPDF2==3.0.1
-pillow==10.4.0
-beautifulsoup4==4.12.3
-lxml==5.2.2
 requests==2.32.3
+beautifulsoup4==4.12.3
+pandas==2.2.2
+pdfminer.six==20231228
+pytz==2024.1
+python-dateutil==2.9.0.post0
