--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
-# HTTP + HTML
 requests==2.32.3
-urllib3==2.2.2
-certifi==2024.7.4
-charset-normalizer==3.3.2
-idna==3.7
 beautifulsoup4==4.12.3
 lxml==5.2.2
-
-# Utils
-pytz==2024.1
+pandas==2.2.2
 python-dateutil==2.9.0.post0
+pytz==2024.1
 tenacity==8.5.0
